sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:12: error: ';' expected but 'else' found.
    else {Bleu +=1}
    ^